fix about me text overspilling to the right

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -366,6 +366,7 @@ section {
   flex-direction: column;
   gap: var(--medium-spacing);
   padding-top: var(--medium-spacing);
+  max-width: 100%;
 
   @media screen and (min-width: $medium-screen) {
     padding-top: 0;
